# elfkit

./: Cargo.toml
bolter/: main.rs
src/: dynamic.rs  elf.rs  loader.rs  relocation.rs  symbol.rs
tests/: layout.rs
