[package]
name = "elfkit"
version = "0.0.6"
authors = ["Arvid E. Picciani <aep@exys.org>"]
repository = "https://github.com/aep/elfkit"
homepage   = "https://github.com/aep/elfkit"
documentation = "https://docs.rs/elfkit"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
an elf parser and manipulation library in pure rust
"""

[dependencies]
byteorder = "1"
enum-primitive-derive = "0.1"
num-traits = "0.2.5"
bitflags = "1.0.0"
itertools = "0.7.8"
rayon = "1.0.1"
bit-vec = "0.5.0"
bloom = "0.3.2"
fnv = "1.0.5"
indexmap = "1.0.1"
log = "0.4"
ar = "0.6.0"

## bin dependencies
clap = { version = "2.28.0", optional = true }
colored = { version = "1", optional = true }
tempfile = { version = "3.0.2", optional = true }
sha2 = { version = "0.7.1", optional = true }
env_logger = { version = "0.5.10", optional = true }
pretty_env_logger = { version = "0.2.3", optional = true }
glob = { version = "0.2.11", optional = true }

[features]
build-binary = [ "clap", "colored", "tempfile", "sha2", "env_logger", "pretty_env_logger", "glob" ]

[[bin]]
name="readelf"
path="bin/readelf.rs"
required-features = ["build-binary"]


[[bin]]
name="linktree"
path="bin/linktree.rs"
required-features = ["build-binary"]

[[bin]]
name="ld"
path="bin/ld.rs"
required-features = ["build-binary"]

[[bin]]
name="ldd"
path="bin/ldd.rs"
required-features = ["build-binary"]
